syntax = "proto3";

package proto.services.properties_svc.v1;

option go_package = "gen/proto/services/properties-svc";

//
// CreatePropertySet
//

message CreatePropertySetRequest {
  string name = 1;

  repeated string properties = 3; // @gotags: validate:"dive,uuid4"
}

message CreatePropertySetResponse {
  string property_set_id = 1;
}

//
// UpdatePropertySet
//


message UpdatePropertySetRequest {
  string set_id = 1; // @gotags: validate:"uuid4"
  optional string name = 2; // TODO: add validation

  repeated string added_properties = 3; // @gotags: validate:"dive,uuid4"
  repeated string removed_properties = 4; // @gotags: validate:"dive,uuid4"
}

message UpdatePropertySetResponse {}

//
// UpdatePropertySet
//


message DeletePropertySetRequest {
  string set_id = 1; // @gotags: validate:"uuid4"
}

message DeletePropertySetResponse {}

service PropertySetsService {
  rpc CreatePropertySet (CreatePropertySetRequest) returns (CreatePropertySetResponse) {}
  rpc UpdatePropertySet (UpdatePropertySetRequest) returns (UpdatePropertySetResponse) {}
  rpc DeletePropertySet (DeletePropertySetRequest) returns (DeletePropertySetResponse) {}
}
