syntax = "proto3";

package services.property_svc.v1;

option go_package = "gen/proto/services/property-svc";

// TODO: This proto is just an hello-world example and far from where it should be!

//
// CreatePropertySet
//
message CreatePropertySetRequest{
  string name = 1;
}

message CreatePropertySetResponse{
  string id = 1;
}

message GetPropertySetRequest{
  string id = 1;
}

message GetPropertySetResponse{
  string id = 1;
  string name = 2;
}

//
// PropertySetService
//

service PropertySetService {
  rpc CreatePropertySet(CreatePropertySetRequest) returns (CreatePropertySetResponse) {}
  rpc GetPropertySet(GetPropertySetRequest) returns (GetPropertySetResponse) {}
}

